# final-group07

./: .gitignore  Conclusion.md  KDE_data_exploration.ipynb  KDE_saveas.ipynb  Makefile  Modelling.ipynb  README.md  ai-documentation.txt  data_exploration.ipynb  data_preprocessing.ipynb  environment.yml  main.ipynb  myst.yml  pyproject.toml  references.bib
data/: Crashes.csv  LICENSE  Parties.csv  Victims.csv
figures/: KSI_crash_severity_summary.csv  crash_severity_summary.csv  model_summary.csv
tools/: KDE.py  __init__.py  data_cleaning.py  decode_switrs.py  switrs_codebook.py
tools/tests/: test_KDE.py  test_decode_switrs.py  test_modelling.py
