[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[project]
name = "Final Tools"
authors = [
  { name="Group 7", email="reilyjean@berkeley.edu" },
]
description = "A Python library for ligo tools"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "tqdm",
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["tools", "toys"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-reilyfairchild/tree/main/ligotools" #"https://github.com/UCB-stat-159-f25/hw3-reilyfairchild"
Issues = "https://github.com/UCB-stat-159-f25/hw3-reilyfairchild/issues"

[tool.setuptools]
packages = ["tools"]

[tool.setuptools.dynamic]
version = {attr = "tools.__version__"}