[build-system]
requires = ["setuptools >= 70"]
build-backend = "setuptools.build_meta"

[project]
name = "tools"
authors = [
  { name="Group 7", email="reilyjean@berkeley.edu" },
]
description = "A Python library for TIMS final project tools"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pandas",
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/final-group07"
Issues = "https://github.com/UCB-stat-159-f25/final-group07issues"

[tool.setuptools]
packages = ["tools"]

[tool.setuptools.dynamic]
version = {attr = "tools.__version__"}